HTML Me Something revisied

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
             <body>
                <article>
       <h2 id = "altHeader">What is Dungeons and Dragons?</h2>
-      <p>I have been playing Dungeons and Dragons or other Table Top Role Playing Games (TTRPG) for over a decade. In that time I have had the opportunity to play (and run) some pretty incredible modules.
+      <p>Dungeons and Dragons (commonly referred to as DnD) is a Table Top Role Playing Game (TTRPG), which is a game in which several people take on different roles within a game and roleplay. It is akin to acting, but you do not have to be an actor to play. 
+         I have been playing Dungeons and Dragons or other TTRPGs for over a decade. In that time I have had the opportunity to play (and run) some pretty incredible modules.
          What is a module you may ask? This is story that the players of the TTRPG to play though and normally includes encounters. Encounters can be broken down into a few a different catagories. Some may be encounters where
          the players may have to fight thier way through (many encounters fall under this category), or perhaps think their way through, such as a trap or puzzle. Some encounters are simply a conversation so the player can learn valuable bits of information. 
          Having memorable moments within encounters is what seperates good modules to great modules. </p>
